# Pode-Agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: IMPROVEMENTS.md  agent-loop.md  api-specs.md  architecture.md  bugfix-ui-input.md  data-flows.md  e2e-test-prompt-for-agent.md  e2e-test-prompts.md  e2e-test-result.md  modules.md  need2fix.md  phases.md  plan-mode.md  skill-system.md  subagent-system.md  tech-stack.md  testing-strategy.md  tools-system.md
pode_agent/: __init__.py
pode_agent/app/: compact.py  print_mode.py  query.py  session.py  sub_session.py  tool_queue.py
pode_agent/core/: __init__.py  cost_tracker.py
pode_agent/core/config/: __init__.py  defaults.py  loader.py  schema.py
pode_agent/core/permissions/: __init__.py  engine.py  store.py  types.py
pode_agent/core/tools/: __init__.py  base.py  executor.py  loader.py  registry.py
pode_agent/entrypoints/: acp_server.py  cli.py  mcp_server.py  ui_bridge.py
pode_agent/infra/: __init__.py  fs.py  http_client.py  logging.py  shell.py
pode_agent/services/: __init__.py
pode_agent/services/agents/: __init__.py  background_tasks.py  fork_context.py  loader.py  storage.py  transcripts.py
pode_agent/services/ai/: __init__.py  anthropic.py  base.py  factory.py  openai.py
pode_agent/services/context/: __init__.py  gatherer.py  mention_processor.py
pode_agent/services/hooks/: __init__.py  base.py  runner.py
pode_agent/services/mcp/: __init__.py  client.py  tools.py
pode_agent/services/plugins/: __init__.py  commands.py  marketplace.py  runtime.py  validation.py
pode_agent/services/system/: __init__.py  system_prompt.py
pode_agent/tools/: __init__.py
pode_agent/tools/agent/: ls.py  plan_mode.py  task.py
pode_agent/tools/ai/: ask_expert.py  skill.py
pode_agent/tools/filesystem/: __init__.py  file_edit.py  file_read.py  file_write.py  glob.py  multi_edit.py  notebook_edit.py  notebook_read.py
pode_agent/tools/interaction/: __init__.py  ask_user.py  slash_command.py  todo_write.py
pode_agent/tools/network/: web_fetch.py  web_search.py
pode_agent/tools/search/: __init__.py  grep.py  lsp.py
pode_agent/tools/system/: __init__.py  bash.py  kill_shell.py  task_output.py
pode_agent/types/: __init__.py  agent.py  conversation.py  plan.py  session_events.py  skill.py
src/ui/: package.json  tsconfig.json
tests/: conftest.py
tests/e2e/: e2e_results.json  e2e_runner.py
tests/fixtures/: mcp_echo_server.py  test-marketplace.json
tests/integration/: conftest.py  test_full_chain.py  test_live_providers.py  test_query_toolchain.py
tests/unit/: test_custom_commands.py  test_hooks.py  test_mcp_client.py  test_subagent.py  test_ui_bridge.py
(+98 files in other folders)
