[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pode-agent"
version = "0.1.0"
description = "AI-powered terminal coding assistant (Python rewrite of Kode-Agent)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Pode-Agent Contributors" },
]
keywords = ["ai", "agent", "cli", "coding-assistant", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    # Terminal UI — Python 后端输出（rich），前端由 package.json 管理（Bun + React + Ink v5）
    # 前后端通过 JSON-RPC over stdio 通信
    "rich>=13.7.0",
    # Data validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # HTTP
    "httpx>=0.27.0",
    # Git
    "gitpython>=3.1.40",
    # Config / YAML
    "pyyaml>=6.0.1",
    # LLM Providers
    "anthropic>=0.40.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-pyyaml",
    "respx>=0.21.0",
]

[project.scripts]
pode = "pode_agent.entrypoints.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["pode_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests that run the full CLI",
    "requires_api_key: Tests that need real API keys",
    "slow: Tests that take more than 10 seconds",
    "integration: Integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pode_agent.services.ai.anthropic"
disable_error_code = ["arg-type", "override"]

[[tool.mypy.overrides]]
module = "pode_agent.services.ai.openai"
disable_error_code = ["arg-type", "override"]

[[tool.mypy.overrides]]
module = "pode_agent.services.ai.factory"
disable_error_code = ["call-arg", "attr-defined", "union-attr"]

[[tool.mypy.overrides]]
module = "pode_agent.app.query"
disable_error_code = ["arg-type", "call-arg", "attr-defined", "unused-coroutine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
